# SkillfulMCP

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirement.md
.claude/: settings.json
.github/workflows/: ci.yml
cli/: main.py
deploy/: Dockerfile.catalog  Dockerfile.webui
deploy/helm/skillful-mcp/: .helmignore  Chart.yaml  values.yaml
deploy/helm/skillful-mcp/templates/: NOTES.txt  _helpers.tpl  catalog-deployment.yaml  catalog-hpa.yaml  catalog-pdb.yaml  catalog-service.yaml  configmap.yaml  ingress.yaml  serviceaccount.yaml  webui-deployment.yaml  webui-hpa.yaml  webui-pdb.yaml  webui-service.yaml
deploy/observability/: grafana-datasources.yml  loki-config.yml  promtail-config.yml
example/: README.md  network.yaml  run_network.py
example/anthropic_sdk/: run_network.py
example/common/: __init__.py  mcp_bootstrap.py  skill_dispatcher.py
example/cursor/: README.md
example/langchain_app/: run_network.py
example/langgraph_app/: run_network.py
example/openai_sdk/: run_network.py
example/skillful/: __init__.py  _base.py  _network.py  anthropic_agent.py  langchain_agent.py  langgraph_agent.py  openai_agent.py
mcp_server/: accounts.py  audit.py  auth.py  authorization.py  bundle_signing.py  bundles.py  catalog.py  config.py  database.py  dependencies.py  errors.py  keyring.py  logging_config.py  mailer.py  main.py  middleware.py  models.py  pwhash.py  ratelimit.py  registry.py  revocation.py  schemas.py  shares.py  users.py
mcp_server/routers/: accounts.py  admin.py  agents.py  audit.py  bundle_signature.py  bundles.py  health.py  move_account.py  shares.py  signup.py  skills.py  skillsets.py  token.py  users.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_visibility.py  0003_users.py  0004_accounts_and_memberships.py  0005_catalog_account.py  0006_shares.py  0007_audit_events.py  0008_bundle_signatures.py
spec/: README.md  agent-model.md  architecture.md  delivery.md  deployment-azure.md  deployment.md  example-frameworks.md  jwt-access-control.md  migrations.md  productization.md  prototype.md  requirements.md  skill-bundles.md  testing.md  user-management.md  visibility-and-accounts.md  webui.md
spec/cli/: README.md  main.md
spec/example/: README.md  common.md  cursor.md  network-config.md  runners.md  skillful.md
spec/integrations/: claude-code.md
spec/mcp_server/: README.md  auth.md  authorization.md  bundles.md  catalog.md  config.md  database.md  dependencies.md  errors.md  keyring.md  logging_config.md  main.md  middleware.md  models.md  ratelimit.md  registry.md  revocation.md  schemas.md
spec/mcp_server/routers/: README.md  admin.md  agents.md  bundles.md  health.md  skills.md  skillsets.md  token.md
spec/webui/: README.md  auth.md  client.md  config.md  main.md  templates.md
tests/: conftest.py  test_accounts.py  test_admin_list_filters.py  test_api_accounts.py  test_api_agents.py  test_api_bundles.py  test_api_signup.py  test_api_skills.py  test_api_skillsets.py  test_api_token.py  test_audit.py  test_auth.py  test_authorization.py  test_bundle_signing.py  test_bundle_store_s3.py  test_bundles.py  test_bundles_fuzz.py  test_catalog.py  test_catalog_account_scoping.py  test_cli.py  test_cli_superadmin.py  test_e2e.py  test_errors.py  test_health.py  test_jwks.py  test_keyring_revocation.py  test_mailer.py  test_mcp_bridge.py  test_membership_removal.py  test_middleware.py  test_migrations.py  test_move_account.py  test_observability.py  test_oidc.py  test_optional_extras.py  test_pwhash.py  test_rate_limit.py  test_registry.py  test_shares.py  test_skillful_agents.py  (+11 more)
tools/mcp-bridge/: README.md  skillful_bridge.py
webui/: auth.py  client.py  config.py  main.py  middleware.py  oidc.py
webui/templates/: _skill_modal.html  _skillset_modal.html  account.html  account_detail.html  account_new.html  accounts.html  agents.html  base.html  dashboard.html  landing.html  login.html  skill.html  skill_clone.html  skill_new_version.html  skills.html  skillset.html  skillsets.html  token_new.html  token_result.html  user_detail.html  user_new.html  users.html
