[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillful-mcp"
version = "0.1.0"
description = "MCP server with JWT-based skill authorization"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "typer>=0.12",
    "semver>=3.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "anthropic>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    # Mock S3 for bundle-store tests (Wave 5). Gated to dev because it's a
    # test-only dependency even for deployments that use S3.
    "moto[s3]>=5.0",
]
# S3 bundle storage. Install with: pip install -e ".[s3]"
# Use MCP_BUNDLE_STORE=s3 + MCP_BUNDLE_S3_BUCKET at runtime to enable.
s3 = [
    "boto3>=1.34",
]
# Postgres driver for production deployments.
# Install with: pip install -e ".[postgres]"
postgres = [
    "psycopg2-binary>=2.9",
]
# Framework-specific SDKs used by the runners under example/<framework>/.
# Install with: pip install -e ".[examples]"
examples = [
    "openai>=1.40",
    "langchain>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-core>=1.0",
    "langgraph>=1.0",
]

[project.scripts]
mcp-server = "mcp_server.main:run"
mcp-cli = "cli.main:app"
webui-server = "webui.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*", "cli*", "webui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
