[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillful-mcp"
version = "0.1.0"
description = "MCP server with JWT-based skill authorization"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "typer>=0.12",
    "semver>=3.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "anthropic>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "alembic>=1.13",
    # Web UI operator password hashing (Wave 6a). `bcrypt` directly —
    # passlib 1.7 has a known compat issue with bcrypt 5.x.
    "bcrypt>=4.0",
    # Signed session cookie storage. Pinned explicitly so installs don't
    # rely on starlette's transitive dep.
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    # Mock S3 for bundle-store tests (Wave 5). Gated to dev because it's a
    # test-only dependency even for deployments that use S3.
    "moto[s3]>=5.0",
]
# S3 bundle storage. Install with: pip install -e ".[s3]"
# Use MCP_BUNDLE_STORE=s3 + MCP_BUNDLE_S3_BUCKET at runtime to enable.
s3 = [
    "boto3>=1.34",
]
# Postgres driver for production deployments.
# Install with: pip install -e ".[postgres]"
postgres = [
    "psycopg2-binary>=2.9",
]
# Framework-specific SDKs used by the runners under example/<framework>/.
# Install with: pip install -e ".[examples]"
examples = [
    "openai>=1.40",
    "langchain>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-core>=1.0",
    "langgraph>=1.0",
]

[project.scripts]
mcp-server = "mcp_server.main:run"
mcp-cli = "cli.main:app"
webui-server = "webui.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*", "cli*", "webui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Coverage is opt-in via `pytest --cov` or `make test-cov`. Not on by
# default because it slows the suite ~30% and the per-module coverage
# is rarely what you're iterating on.

[tool.coverage.run]
source = ["mcp_server", "webui", "cli", "example/skillful", "example/common"]
omit = [
    "*/__init__.py",
    "*/migrations/*",
    # The Skillful* agent classes need a real LLM to exercise their
    # `.run()` paths; those are covered by the unit tests that verify
    # translation + lazy fetch (see tests/test_skillful_agents.py) and
    # don't need the full runtime path gated on Anthropic/OpenAI keys.
]

[tool.coverage.report]
precision = 1
show_missing = false
skip_covered = true
# Fail the `coverage report` call if the total drops below this. CI
# invokes `coverage report` after `pytest --cov` so a regression is
# visible.
fail_under = 85
